# agentic-research-assistant

./: pyproject.toml  requirements.txt  users.db
notebook/: test.ipynb
research_and_analyst/api/services/: report_service.py
research_and_analyst/api/templates/: report_progress.html
research_and_analyst/backend_server/: models.py  workflow.py
research_and_analyst/config/: configuration.yaml
research_and_analyst/prompt_lib/: prompt_locator.py  prompts.py
research_and_analyst/utils/: config_loader.py  model_loader.py
