[build-system]
requires = ["setuptools>=68"]         
build-backend = "setuptools.build_meta"

[project]
name = "agentic_research_assistant"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiofiles>=25.1.0",
    "bcrypt==3.2.2",
    "fastapi>=0.128.0",
    "ipykernel>=7.1.0",
    "jinja2>=3.1.6",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langchain-ollama>=1.0.1",
    "langchain-openai>=1.1.6",
    "langgraph>=1.0.5",
    "passlib>=1.7.4",
    "python-docx>=1.2.0",
    "python-multipart>=0.0.22",
    "reportlab>=4.4.7",
    "structlog>=25.5.0",
    "tavily-python>=0.7.17",
    "uvicorn>=0.40.0",
    "wikipedia>=1.4.0",
]

authors = [{ name = "Aryan Gupta" }]
license = { text = "Proprietary" }

[tool.setuptools.packages.find]
where = ["research_and_analyst"]

[tool.uv.sources]
agentic-research-assistant = { workspace = true }

[dependency-groups]
dev = [
    "agentic-research-assistant",
    "ipykernel>=7.1.0",
    "langchain-community>=0.4.1",
    "langchain-core>=1.2.5",
    "langchain-google-genai>=4.1.2",
    "langchain-groq>=1.1.1",
    "langgraph>=1.0.5",
    "structlog>=25.5.0",
    "tavily-python>=0.7.17",
    "wikipedia>=1.4.0",
]

